# brainrotstudy

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  Makefile  OPTIMIZATIONS.md  QUICKSTART.md  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  main.py  requirements.txt
apps/web/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ProgressUI.tsx  VideoPlayer.tsx
apps/web/lib/: useJobHistory.ts
apps/worker/: .dockerignore  Dockerfile  celery_app.py  cleanup.py  pipeline.py  requirements.txt  tasks.py
apps/worker/stages/: __init__.py  assets.py  captions.py  extract.py  finalize.py  quiz.py  render.py  script.py  timeline.py  voice.py
docker/: entrypoint.sh
server/: pyproject.toml
server/brainrotstudy/: __init__.py  cli.py  config.py  db.py  events.py  main.py  schemas.py  storage.py
server/brainrotstudy/pipeline/: __init__.py  exports.py  extract.py  narrate.py  render.py  runner.py  script.py  visuals.py
server/tests/: conftest.py  test_api.py  test_db.py  test_extract.py  test_render.py  test_script.py  test_visuals.py
shared/: __init__.py  models.py  utils.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/jobs/: page.tsx
web/components/: CreateForm.tsx  Progress.tsx  Result.tsx
web/components/ui/: Button.tsx  Input.tsx  Label.tsx  Select.tsx  Switch.tsx  Tabs.tsx
web/lib/: api.ts
(+14 files in other folders)
